deployments/nginx/nginx-ingress-cert-manager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-wp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # or "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - example.com
    - example1.com
    secretName: example-tls
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
    - host: example1.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
